--- a/docs/getting-started/getting-started-platform.asciidoc
+++ b/docs/getting-started/getting-started-platform.asciidoc
@@ -21,7 +21,7 @@ As a general example of a package install, you may find it useful.
 
 === Images
 
-link:../machinekit-images[Machinekit Images for BeagleBoneBlack] +
+link:../machinekit-images-for-bbb[Machinekit Images for BeagleBoneBlack] +
 link:../machinekit-de10-images[Machinekit Images for DE0/DE10-Nano-SoC boards]
 
 === Installing packages
