Update getting started docs for Buster

--- a/docs/getting-started/install-rt-kernel-armhf.asciidoc
+++ b/docs/getting-started/install-rt-kernel-armhf.asciidoc
@@ -3,9 +3,9 @@
 
 :skip-front-matter:
 
-= Stretch realtime kernel 
+= Stretch and Buster armhf realtime kernel 
 
-Xenomai is not supported in Stretch, you should use a rt-preempt kernel
+Xenomai is not supported in Stretch or Buster, you should use a rt-preempt kernel
 
 There are many kernels in this repository
 http://repos.rcn-ee.com/debian/pool/main/l/linux-upstream/
