--- a/docs/getting-started/install-rt-kernel-amd64.asciidoc
+++ b/docs/getting-started/install-rt-kernel-amd64.asciidoc
@@ -13,7 +13,7 @@ sudo apt-get install linux-image-xenomai.x86-amd64 	  # amd64
 ----
 
 [NOTE]
-There are only Xenomai kernels for Wheezy and Jessie not Stretch
+There are only Xenomai kernels for Wheezy and Jessie not Stretch or Buster
 
 
 = RT-PREEMPT realtime kernel (amd64)
@@ -47,7 +47,7 @@ sudo apt-get update
 sudo apt-get install linux-image-rt-amd64
 ----
 
-== Debian Stretch repos contain rt-preempt kernels
+== Debian Stretch and Buster repos contain rt-preempt kernels
 
 Update apt and pull the kernel
 
