--- a/docs/developing/developing.asciidoc
+++ b/docs/developing/developing.asciidoc
@@ -12,7 +12,9 @@ starting at point 1 should lead you thru the next steps and return you to this p
 
 . link:/docs/getting-started/installing-packages#configure-apt[Configure Apt]
 . link:/docs/getting-started/installing-packages#install-RT-kernel[Install the kernel of your choice]
+. link:/docs/developing/common-developing[Set up common development environment for all Machinekit projects]
 . link:/docs/developing/machinekit-developing[Install developing packages for Machinekit]
+. link:/docs/developing/emcapplication-developing[Set up building environment for EMCApplication]
 
 == Other instructions for specific development
 . link:/docs/developing/CAN-developing[CAN developing for Machinekit]
